product/standard/cicd-pro/gitlab-pro/postgresql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    name: postgresql
  namespace: gitlab
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  selector:
    name: postgresql
