product/standard/cicd-pro/gitlab-pro/ingress-nginx-gitlab.yaml
apiVersion: extensions/v1beta1
#apiVersion: v1
kind: Ingress
metadata:
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: gitlab
  name: gitlab
  namespace: gitlab
spec:
  rules:
  - host: gitlab.future.com
    http:
      paths:
      - backend:
          serviceName: gitlab
          servicePort: 80
        path: /
